@@ -42,6 +42,7 @@
             <version>10.9.1.0</version>
         </dependency>
     </dependencies>
+  
     <build>
         <plugins>
             <plugin>
@@ -83,9 +84,13 @@
                         <id>ide-debug</id>
                         <configuration>
                             <options>
+
+                                <option>--enable-native-access=javafx.graphics</option>
                                 <option>--add-modules</option>
                                 <option>javafx.media</option>
+                                <option>javafx.graphics</option>
                                 <option>--enable-native-access=javafx.media</option>
+                                <option>-Dprism.dirtyopts=false</option>
                                 <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                             </options>
                         </configuration>
